--- a/server/package.json
+++ b/server/package.json
@@ -4,11 +4,15 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "body-parser": "^1.19.1",
+    "cookie-session": "^2.0.0",
+    "dotenv": "^11.0.0",
     "express": "^4.17.2",
     "express-session": "^1.17.2",
     "mongoose": "^6.1.6",
+    "node-schedule": "^2.1.0",
     "passport": "^0.5.2",
-    "passport-google-oauth2": "^0.2.0"
+    "passport-google-oauth20": "^2.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
