--- a/server/package.json
+++ b/server/package.json
@@ -5,12 +5,16 @@
   "main": "index.js",
   "dependencies": {
     "body-parser": "^1.19.1",
+    "cookie-parser": "^1.4.6",
     "cookie-session": "^2.0.0",
     "dotenv": "^11.0.0",
     "express": "^4.17.2",
     "express-session": "^1.17.2",
+    "log-to-file": "^3.0.0",
     "mongoose": "^6.1.6",
+    "mongoose-findorcreate": "^3.0.0",
     "node-schedule": "^2.1.0",
+    "nodemailer": "^6.7.2",
     "passport": "^0.5.2",
     "passport-google-oauth20": "^2.0.0"
   },
